--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Us | Yuktesh Enterprises</title>
+    <title>About Us - Yuktesh Enterprises</title>
     <link rel="stylesheet" href="../css/master.css" />
     <link
       rel="stylesheet"
@@ -54,57 +54,164 @@
       </nav>
     </header>
 
-    <main class="main-content">
-      <div class="content-wrapper">
-        <h1 class="main-title">About Yuktesh Enterprises</h1>
-        <p class="subtitle">
-          Crafting excellence in every brick, with decades of dedication and
-          trust.
-        </p>
-      </div>
-    </main>
+    <div class="container">
+      <!-- Hero Section -->
+      <div class="hero-section">
+        <div class="hero-image">🏭 Yuktesh Manufacturing Plant</div>
+        <h1>Yuktesh Brick Manufacturing</h1>
+        <p class="hero-subtitle">Building Tomorrow with Quality Today</p>
 
-    <section class="company-intro">
-      <div class="intro-content">
-        <h2>Who We Are</h2>
-        <p>
-          Yuktesh Enterprises is a leading manufacturer of cement bricks,
-          dedicated to innovation and quality in construction solutions. Our
-          journey started with a simple vision—to provide durable and
-          sustainable building materials at scale.
-        </p>
-        <h2>Our Mission</h2>
-        <p>
-          To empower construction with eco-friendly, high-performance cement
-          bricks, while maintaining a customer-first approach and unmatched
-          reliability.
-        </p>
-        <h2>Our Vision</h2>
-        <p>
-          To become India’s most trusted name in cement solutions through
-          continuous innovation, integrity, and industry leadership.
-        </p>
-        <h2>Our Values</h2>
-        <ul style="text-align: left; max-width: 700px; margin: auto">
-          <li>
-            <strong>Integrity:</strong> We act with honesty and transparency in
-            everything we do.
-          </li>
-          <li>
-            <strong>Innovation:</strong> We believe in continuous improvement
-            and embracing new ideas.
-          </li>
-          <li>
-            <strong>Quality:</strong> Every brick we make reflects our
-            commitment to excellence.
-          </li>
-          <li>
-            <strong>Customer Commitment:</strong> We strive to build lasting
-            relationships by understanding and serving our customers' needs.
-          </li>
-        </ul>
+        <div class="experience-stats">
+          <div class="stat-card">
+            <div class="stat-number">25+</div>
+            <div class="stat-label">Years Experience</div>
+          </div>
+          <div class="stat-card">
+            <div class="stat-number">50,000</div>
+            <div class="stat-label">Bricks Per Day</div>
+          </div>
+          <div class="stat-card">
+            <div class="stat-number">1000+</div>
+            <div class="stat-label">Projects Completed</div>
+          </div>
+          <div class="stat-card">
+            <div class="stat-number">99.8%</div>
+            <div class="stat-label">Quality Rate</div>
+          </div>
+        </div>
       </div>
-    </section>
+
+      <!-- About Content -->
+      <div class="about-content">
+        <h2>About Yuktesh Brick Manufacturing</h2>
+        <div class="about-text">
+          Established in 1998, Yuktesh Brick Manufacturing has been a
+          cornerstone in the construction industry for over 25 years. We
+          specialize in producing high-quality cement bricks that combine
+          durability, sustainability, and aesthetic appeal. Our state-of-the-art
+          manufacturing facility operates with a daily production capacity of
+          50,000 premium cement bricks, serving residential, commercial, and
+          industrial construction projects across the region.
+        </div>
+        <div class="about-text">
+          Our commitment to excellence is reflected in our advanced
+          manufacturing processes, quality control systems, and environmental
+          consciousness. We use only the finest raw materials including premium
+          cement, carefully selected aggregates, and additives that enhance the
+          structural integrity and longevity of our products. Every brick
+          undergoes rigorous testing to ensure it meets international standards
+          for strength, durability, and dimensional accuracy.
+        </div>
+        <div class="about-text">
+          At Yuktesh, we believe in sustainable construction practices. Our
+          cement bricks are eco-friendly alternatives to traditional clay
+          bricks, requiring no firing process and utilizing industrial waste
+          materials. This approach not only reduces environmental impact but
+          also delivers superior performance characteristics that modern
+          construction demands.
+        </div>
+      </div>
+
+      <!-- Products Section -->
+      <div class="products-section">
+        <h2>Our Premium Cement Brick Products</h2>
+
+        <div class="products-grid">
+          <!-- Product 1 -->
+          <div class="product-card">
+            <div class="product-image">🧱 Solid Cement Bricks</div>
+            <div class="product-content">
+              <h3 class="product-title">Heavy Duty Solid Cement Bricks</h3>
+              <p class="product-description">
+                Our flagship solid cement bricks offer exceptional compressive
+                strength of 4-8 N/mm². Perfect for load-bearing walls and
+                structural applications.
+              </p>
+              <ul class="features-list">
+                <li>Superior strength and durability</li>
+                <li>Excellent thermal insulation</li>
+                <li>Uniform size and shape</li>
+                <li>Weather resistant</li>
+                <li>Cost-effective solution</li>
+              </ul>
+            </div>
+          </div>
+
+          <!-- Product 2 -->
+          <div class="product-card">
+            <div class="product-image">🏗️ Hollow Cement Blocks</div>
+            <div class="product-content">
+              <h3 class="product-title">Lightweight Hollow Cement Blocks</h3>
+              <p class="product-description">
+                Engineered hollow blocks that reduce structural weight while
+                maintaining strength. Ideal for modern construction with
+                excellent insulation properties.
+              </p>
+              <ul class="features-list">
+                <li>30% lighter than solid bricks</li>
+                <li>Enhanced thermal efficiency</li>
+                <li>Faster construction</li>
+                <li>Sound insulation properties</li>
+                <li>Earthquake resistant design</li>
+              </ul>
+            </div>
+          </div>
+
+          <!-- Product 3 -->
+          <div class="product-card">
+            <div class="product-image">🎨 Designer Face Bricks</div>
+            <div class="product-content">
+              <h3 class="product-title">Decorative Face Cement Bricks</h3>
+              <p class="product-description">
+                Aesthetically pleasing face bricks with textured surfaces and
+                color variations. Perfect for architectural facades and
+                decorative applications.
+              </p>
+              <ul class="features-list">
+                <li>Multiple texture options</li>
+                <li>Color consistency</li>
+                <li>Weather-proof finish</li>
+                <li>Low maintenance</li>
+                <li>Architectural versatility</li>
+              </ul>
+            </div>
+          </div>
+
+          <!-- Product 4 -->
+          <div class="product-card">
+            <div class="product-image">🌿 Eco-Friendly Bricks</div>
+            <div class="product-content">
+              <h3 class="product-title">Green Cement Bricks</h3>
+              <p class="product-description">
+                Environmentally conscious bricks made with recycled materials
+                and fly ash. Sustainable construction choice without
+                compromising quality.
+              </p>
+              <ul class="features-list">
+                <li>50% recycled content</li>
+                <li>Carbon footprint reduction</li>
+                <li>LEED certification support</li>
+                <li>High compressive strength</li>
+                <li>Sustainable manufacturing</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="why-choose-us">
+          <h3>Why Choose Yuktesh Cement Bricks?</h3>
+          <p>
+            Our cement bricks offer unmatched durability with a lifespan of 100+
+            years, superior fire resistance up to 1000°C, excellent water
+            absorption control (less than 10%), and consistent quality that
+            meets IS 2185 standards. With zero firing requirements, our
+            eco-friendly manufacturing process supports sustainable construction
+            while delivering products that are 15-20% more cost-effective than
+            traditional alternatives.
+          </p>
+        </div>
+      </div>
+    </div>
 
     <!-- Footer -->
     <footer class="footer">
