--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -55,9 +55,7 @@
     </header>
 
     <div class="container">
-      <!-- Hero Section -->
       <div class="hero-section">
-        <div class="hero-image">🏭 Yuktesh Manufacturing Plant</div>
         <h1>Yuktesh Brick Manufacturing</h1>
         <p class="hero-subtitle">Building Tomorrow with Quality Today</p>
 
@@ -119,7 +117,7 @@
         <div class="products-grid">
           <!-- Product 1 -->
           <div class="product-card">
-            <div class="product-image">🧱 Solid Cement Bricks</div>
+            <div class="product-image">Solid Cement Bricks</div>
             <div class="product-content">
               <h3 class="product-title">Heavy Duty Solid Cement Bricks</h3>
               <p class="product-description">
@@ -139,7 +137,7 @@
 
           <!-- Product 2 -->
           <div class="product-card">
-            <div class="product-image">🏗️ Hollow Cement Blocks</div>
+            <div class="product-image">Hollow Cement Blocks</div>
             <div class="product-content">
               <h3 class="product-title">Lightweight Hollow Cement Blocks</h3>
               <p class="product-description">
@@ -159,7 +157,7 @@
 
           <!-- Product 3 -->
           <div class="product-card">
-            <div class="product-image">🎨 Designer Face Bricks</div>
+            <div class="product-image">Designer Face Bricks</div>
             <div class="product-content">
               <h3 class="product-title">Decorative Face Cement Bricks</h3>
               <p class="product-description">
@@ -179,7 +177,7 @@
 
           <!-- Product 4 -->
           <div class="product-card">
-            <div class="product-image">🌿 Eco-Friendly Bricks</div>
+            <div class="product-image">Eco-Friendly Bricks</div>
             <div class="product-content">
               <h3 class="product-title">Green Cement Bricks</h3>
               <p class="product-description">
