--- a/html/master.html
+++ b/html/master.html
@@ -37,7 +37,7 @@
       <ul class="navigation" id="mobileMenu">
         <li><a href="master.html" class="nav-link">Home</a></li>
         <li><a href="aboutUs.html" class="nav-link">About Us</a></li>
-        <li><a href="#" class="nav-link">Products</a></li>
+        <li><a href="../html/products.html" class="nav-link">Products</a></li>
         <li><a href="#" class="nav-link">Manufacturing Process</a></li>
         <li><a href="#" class="nav-link">Order Management</a></li>
         <li><a href="employee.html" class="nav-link">Our Team</a></li>
@@ -229,7 +229,7 @@
                     <ul>
                         <li><a href="master.html">Home</a></li>
                         <li><a href="aboutUs.html">About Us</a></li>
-                        <li><a href="#services">Products</a></li>
+                        <li><a href="../html/products.html">Products</a></li>
                         <li><a href="#portfolio">Manufacturing Process</a></li>
                         <li><a href="#blog">Order Management</a></li>
                         <li><a href="employee.html">Our Team</a></li>
