--- a/html/products.html
+++ b/html/products.html
@@ -39,7 +39,7 @@
             <ul class="navigation" id="mobileMenu">
                 <li><a href="master.html" class="nav-link">Home</a></li>
                 <li><a href="../html/aboutUs.html" class="nav-link">About Us</a></li>
-                <li><a href="#" class="nav-link">Products</a></li>
+                <li><a href="#" class="nav-link nav-active">Products</a></li>
                 <li><a href="#" class="nav-link">Manufacturing Process</a></li>
                 <li><a href="#" class="nav-link">Order Management</a></li>
                 <li><a href="./employee.html" class="nav-link">Our Team</a></li>
