--- a/html/employee.html
+++ b/html/employee.html
@@ -40,7 +40,9 @@
               <a href="master.html" class="nav-link">Home</a>
             </li>
             <li><a href="aboutUs.html" class="nav-link">About Us</a></li>
-            <li><a href="../html/products.html" class="nav-link">Products</a></li>
+            <li>
+              <a href="../html/products.html" class="nav-link">Products</a>
+            </li>
             <li>
               <a href="#" class="nav-link">Manufacturing Process</a>
             </li>
