--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -44,7 +44,7 @@
 
         <ul class="navigation" id="mobileMenu">
           <li><a href="master.html" class="nav-link">Home</a></li>
-          <li><a href="about.html" class="nav-link active">About Us</a></li>
+          <li><a href="about.html" class="nav-link nav-active">About Us</a></li>
           <li><a href="../html/products.html" class="nav-link">Products</a></li>
           <li><a href="#" class="nav-link">Manufacturing Process</a></li>
           <li><a href="#" class="nav-link">Order Management</a></li>
