--- a/html/contactUs.html
+++ b/html/contactUs.html
@@ -55,7 +55,9 @@
           <li><a href="#" class="nav-link">Manufacturing Process</a></li>
           <li><a href="#" class="nav-link">Order Management</a></li>
           <li><a href="./employee.html" class="nav-link">Our Team</a></li>
-          <li><a href="contactUs.html" class="nav-link">Contact Us</a></li>
+          <li>
+            <a href="contactUs.html" class="nav-link nav-active">Contact Us</a>
+          </li>
         </ul>
       </nav>
     </header>
