--- a/html/employee.html
+++ b/html/employee.html
@@ -41,7 +41,10 @@
             </li>
             <li><a href="aboutUs.html" class="nav-link">About Us</a></li>
             <li>
-              <a href="../html/products.html" class="nav-link">Products</a>
+              <a href="products.html" class="nav-link">Products</a>
+            </li>
+            <li>
+              <a href="#" class="nav-link">Media</a>
             </li>
             <li>
               <a href="#" class="nav-link">Manufacturing Process</a>
@@ -50,7 +53,7 @@
               <a href="#" class="nav-link">Order Management</a>
             </li>
             <li>
-              <a href="employee.html" class="nav-link">Our Team</a>
+              <a href="employee.html" class="nav-link nav-active">Our Team</a>
             </li>
             <li>
               <a href="contactUs.html" class="nav-link">Contact Us</a>
@@ -113,7 +116,8 @@
             <ul>
               <li><a href="master.html">Home</a></li>
               <li><a href="aboutUs.html">About Us</a></li>
-              <li><a href="../html/products.html">Products</a></li>
+              <li><a href="products.html">Products</a></li>
+              <li><a href="#blog">Media</a></li>
               <li><a href="#portfolio">Manufacturing Process</a></li>
               <li><a href="#blog">Order Management</a></li>
               <li><a href="employee.html">Our Team</a></li>
