--- a/html/master.html
+++ b/html/master.html
@@ -35,7 +35,7 @@
       </div>
 
       <ul class="navigation" id="mobileMenu">
-        <li><a href="master.html" class="nav-link">Home</a></li>
+        <li><a href="master.html" class="nav-link nav-active">Home</a></li>
         <li><a href="aboutUs.html" class="nav-link">About Us</a></li>
         <li><a href="../html/products.html" class="nav-link">Products</a></li>
         <li><a href="#" class="nav-link">Manufacturing Process</a></li>
