--- a/html/products.html
+++ b/html/products.html
@@ -44,6 +44,7 @@
           <li><a href="master.html" class="nav-link">Home</a></li>
           <li><a href="aboutUs.html" class="nav-link">About Us</a></li>
           <li><a href="#" class="nav-link nav-active">Products</a></li>
+          <li><a href="#" class="nav-link">Media</a></li>
           <li><a href="#" class="nav-link">Manufacturing Process</a></li>
           <li><a href="#" class="nav-link">Order Management</a></li>
           <li><a href="employee.html" class="nav-link">Our Team</a></li>
@@ -182,6 +183,7 @@
               <li><a href="../html/master.html">Home</a></li>
               <li><a href="../html/aboutUs.html">About Us</a></li>
               <li><a href="#services">Products</a></li>
+              <li><a href="#">Media</a></li>
               <li><a href="#portfolio">Manufacturing Process</a></li>
               <li><a href="#blog">Order Management</a></li>
               <li><a href="../html/employee.html">Our Team</a></li>
