--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -44,8 +44,11 @@
 
         <ul class="navigation" id="mobileMenu">
           <li><a href="master.html" class="nav-link">Home</a></li>
-          <li><a href="about.html" class="nav-link nav-active">About Us</a></li>
-          <li><a href="../html/products.html" class="nav-link">Products</a></li>
+          <li>
+            <a href="aboutUs.html" class="nav-link nav-active">About Us</a>
+          </li>
+          <li><a href="products.html" class="nav-link">Products</a></li>
+          <li><a href="#" class="nav-link">Media</a></li>
           <li><a href="#" class="nav-link">Manufacturing Process</a></li>
           <li><a href="#" class="nav-link">Order Management</a></li>
           <li><a href="employee.html" class="nav-link">Our Team</a></li>
@@ -219,8 +222,9 @@
             <h3>Quick Links</h3>
             <ul>
               <li><a href="master.html">Home</a></li>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="#">Products</a></li>
+              <li><a href="aboutUs.html">About Us</a></li>
+              <li><a href="products.html">Products</a></li>
+              <li><a href="#">Media</a></li>
               <li><a href="#">Manufacturing Process</a></li>
               <li><a href="#">Order Management</a></li>
               <li><a href="employee.html">Our Team</a></li>
