--- a/html/contactUs.html
+++ b/html/contactUs.html
@@ -52,6 +52,7 @@
           <li><a href="master.html" class="nav-link">Home</a></li>
           <li><a href="aboutUs.html" class="nav-link">About Us</a></li>
           <li><a href="../html/products.html" class="nav-link">Products</a></li>
+          <li><a href="#" class="nav-link">Media</a></li>
           <li><a href="#" class="nav-link">Manufacturing Process</a></li>
           <li><a href="#" class="nav-link">Order Management</a></li>
           <li><a href="./employee.html" class="nav-link">Our Team</a></li>
@@ -122,6 +123,7 @@
               <li><a href="master.html">Home</a></li>
               <li><a href="aboutUs.html">About Us</a></li>
               <li><a href="../html/products.html">Products</a></li>
+              <li><a href="#">Media</a></li>
               <li><a href="#portfolio">Manufacturing Process</a></li>
               <li><a href="#blog">Order Management</a></li>
               <li><a href="employee.html">Our Team</a></li>
