--- a/html/products.html
+++ b/html/products.html
@@ -151,27 +151,36 @@
               These are made from recycled materials like plastic and waste,
               making them a sustainable option.
             </p>
-            <span class="product-price">Contact for Quote</span>
-            <a href="#" class="btn">Get a Quote</a>
+            <span class="product-price">5.5₹</span>
+            <a href="#" class="btn">View Details</a>
           </div>
         </div>
       </div>
     </section>
-
-    <!-- Modal Structure -->
-    <!-- <div id="productModal" class="modal hidden">
-        <div class="modal-content">
-            <span class="close-button">&times;</span>
-            <h2>Multi Hole Brick</h2>
-            <p><strong>Description:</strong> A light-weight brick with excellent thermal and sound insulation.</p>
-            <p><strong>Size:</strong> 190 x 90 x 90 mm</p>
-            <p><strong>Weight:</strong> ~2.5 kg</p>
-            <p><strong>Material:</strong> Clay / Fly Ash</p>
-            <p><strong>Application:</strong> Partition walls, acoustic insulation</p>
-            <p> <strong>Price:</strong> 5.5 per Unit</p>
-            <button id="buynow">Buy Now</button>
-        </div>
-    </div> -->
+    <!--modal part-->
+    <div id="productModal" class="modal hidden">
+      <div class="modal-content">
+        <span class="close-button">&times;</span>
+        <h2 id="modalTitle"></h2>
+        <p><strong>Description:</strong> <span id="modalDescription"></span></p>
+        <p>
+          <strong>Size:</strong> <span id="modalSize">190 x 90 x 90 mm</span>
+        </p>
+        <p><strong>Weight:</strong> <span id="modalWeight">~2.5 kg</span></p>
+        <p>
+          <strong>Material:</strong>
+          <span id="modalMaterial">Clay / Fly Ash</span>
+        </p>
+        <p>
+          <strong>Application:</strong>
+          <span id="modalApplication"
+            >Partition walls, acoustic insulation</span
+          >
+        </p>
+        <p><strong>Price:</strong> <span id="modalPrice"></span></p>
+        <button id="buynow">Buy Now</button>
+      </div>
+    </div>
 
     <!-- footer -->
     <footer class="footer">
@@ -190,18 +199,6 @@
               <li><a href="../html/contactUs.html">Contact Us</a></li>
             </ul>
           </div>
-
-          <!-- <div class="footer-section">
-            <h3>Services</h3>
-            <ul>
-              <li><a href="#web-design">Web Design</a></li>
-              <li><a href="#development">Development</a></li>
-              <li><a href="#seo">SEO Optimization</a></li>
-              <li><a href="#marketing">Digital Marketing</a></li>
-              <li><a href="#consulting">Consulting</a></li>
-              <li><a href="#support">24/7 Support</a></li>
-            </ul>
-          </div> -->
 
           <div class="footer-section">
             <h3>Connect With Us</h3>
