--- a/html/products.html
+++ b/html/products.html
@@ -1,239 +1,232 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us</title>
     <link rel="stylesheet" href="../css/products.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
+</head>
 
-  <body>
+<body>
     <!-- navbar -->
     <div class="video-container">
-      <video class="bg-video" autoplay muted loop playsinline>
-        <source src="../assets/background.mp4" type="video/mp4" />
-      </video>
+        <video class="bg-video" autoplay muted loop playsinline>
+            <source src="../assets/background.mp4" type="video/mp4" />
+        </video>
     </div>
     <div class="video-overlay"></div>
 
     <header class="header">
-      <nav class="nav-container">
-        <div class="brand-logo">
-          <a href="index.html">
-            <img
-              src="../assets/Logo.png"
-              alt="Yuktesh Enterprises Logo"
-              class="logo-img"
-            />
-          </a>
-        </div>
+        <nav class="nav-container">
+            <div class="brand-logo">
+                <a href="index.html">
+                    <img src="../assets/Logo.png" alt="Yuktesh Enterprises Logo" class="logo-img" />
+                </a>
+            </div>
 
-        <div class="menu-toggle" aria-label="Toggle menu">
-          <div class="menu-bar"></div>
-          <div class="menu-bar"></div>
-          <div class="menu-bar"></div>
-        </div>
+            <div class="menu-toggle" aria-label="Toggle menu">
+                <div class="menu-bar"></div>
+                <div class="menu-bar"></div>
+                <div class="menu-bar"></div>
+            </div>
 
-        <ul class="navigation" id="mobileMenu">
-          <li><a href="master.html" class="nav-link">Home</a></li>
-          <li><a href="aboutUs.html" class="nav-link">About Us</a></li>
-          <li><a href="#" class="nav-link nav-active">Products</a></li>
-          <li><a href="#" class="nav-link">Media</a></li>
-          <li><a href="#" class="nav-link">Manufacturing Process</a></li>
-          <li><a href="#" class="nav-link">Order Management</a></li>
-          <li><a href="employee.html" class="nav-link">Our Team</a></li>
-          <li><a href="contactUs.html" class="nav-link">Contact Us</a></li>
-        </ul>
-      </nav>
+            <ul class="navigation" id="mobileMenu">
+                <li><a href="master.html" class="nav-link">Home</a></li>
+                <li><a href="aboutUs.html" class="nav-link">About Us</a></li>
+                <li><a href="#" class="nav-link nav-active">Products</a></li>
+                <li><a href="#" class="nav-link">Media</a></li>
+                <li><a href="#" class="nav-link">Manufacturing Process</a></li>
+                <li><a href="#" class="nav-link">Order Management</a></li>
+                <li><a href="employee.html" class="nav-link">Our Team</a></li>
+                <li><a href="contactUs.html" class="nav-link">Contact Us</a></li>
+            </ul>
+        </nav>
     </header>
 
     <section class="products">
-      <div class="section-title">
-        <h2>Our Premium Products</h2>
-      </div>
-
-      <div class="product-grid">
-        <!-- Product 1 -->
-        <div class="product-card">
-          <div class="product-image">
-            <img src="../assets/Multi Hole Brick.png" alt="Product 1" />
-          </div>
-          <div class="product-info">
-            <h3>Multi Hole Brick</h3>
-            <p>
-              It is a light-weight brick with excellent thermal and sound
-              insulation.
-            </p>
-            <span class="product-price">5.5₹ per unit</span>
-            <a href="#" class="btn">View Details</a>
-          </div>
+        <div class="section-title">
+            <h2>Our Premium Products</h2>
         </div>
 
-        <!-- Product 2 -->
-        <div class="product-card">
-          <div class="product-image">
-            <img src="../assets/Multi Hole Brick.png" alt="Product 2" />
-          </div>
-          <div class="product-info">
-            <h3>8 Hole Brick</h3>
-            <p>
-              The 8 conical holes in the brick, trap air inside and provide
-              better thermal insulation than ordinary brick.
-            </p>
-            <span class="product-price">5.5₹</span>
-            <a href="#" class="btn">View Details</a>
-          </div>
-        </div>
+        <div class="product-grid">
+            <!-- Product 1 -->
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="../assets/Multi Hole Brick.png" alt="Product 1" />
+                </div>
+                <div class="product-info">
+                    <h3>Multi Hole Brick</h3>
+                    <p>
+                        It is a light-weight brick with excellent thermal and sound
+                        insulation.
+                    </p>
+                    <span class="product-price">5.5₹ per unit</span>
+                    <a href="#" class="btn">View Details</a>
+                </div>
+            </div>
 
-        <!-- Product 3 -->
-        <div class="product-card">
-          <div class="product-image">
-            <img src="../assets/Multi Hole Brick.png" alt="Product 3" />
-          </div>
-          <div class="product-info">
-            <h3>Hollow Blocks​</h3>
-            <p>
-              Hollow concrete blocks are generally considered strong, durable,
-              and cost-effective building materials.
-            </p>
-            <span class="product-price">5.5₹</span>
-            <a href="#" class="btn">View Details</a>
-          </div>
-        </div>
+            <!-- Product 2 -->
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="../assets/Multi Hole Brick.png" alt="Product 2" />
+                </div>
+                <div class="product-info">
+                    <h3>Paving block</h3>
+                    <p>
+                        The 8 conical holes in the brick, trap air inside and provide
+                        better thermal insulation than ordinary brick.
+                    </p>
+                    <span class="product-price">5.5₹</span>
+                    <a href="#" class="btn">View Details</a>
+                </div>
+            </div>
 
-        <!-- Product 4 -->
-        <div class="product-card">
-          <div class="product-image">
-            <img src="../assets/Multi Hole Brick.png" alt="Product 4" />
-          </div>
-          <div class="product-info">
-            <h3>Cement brick</h3>
-            <p>
-              also known as concrete bricks or concrete masonry units (CMUs),
-              are small rectangular blocks used in construction, primarily for
-              walls and other building elements.
-            </p>
-            <span class="product-price">5.5₹</span>
-            <a href="#" class="btn">View Details</a>
-          </div>
-        </div>
+            <!-- Product 3 -->
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="../assets/Multi Hole Brick.png" alt="Product 3" />
+                </div>
+                <div class="product-info">
+                    <h3>Hollow Blocks​</h3>
+                    <p>
+                        Hollow concrete blocks are generally considered strong, durable,
+                        and cost-effective building materials.
+                    </p>
+                    <span class="product-price">5.5₹</span>
+                    <a href="#" class="btn">View Details</a>
+                </div>
+            </div>
 
-        <!-- Product 5 -->
-        <div class="product-card">
-          <div class="product-image">
-            <img src="../assets/Multi Hole Brick.png" alt="Product 5" />
-          </div>
-          <div class="product-info">
-            <h3>Fly Ash</h3>
-            <p>
-              These eco-friendly bricks utilize fly ash, a by-product of coal
-              combustion, as a main aggregate.
-            </p>
-            <span class="product-price">5.5₹</span>
-            <a href="#" class="btn">View Details</a>
-          </div>
-        </div>
+            <!-- Product 4 -->
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="../assets/Multi Hole Brick.png" alt="Product 4" />
+                </div>
+                <div class="product-info">
+                    <h3>Solid Cement bricks</h3>
+                    <p>
+                        also known as concrete bricks or concrete masonry units (CMUs),
+                        are small rectangular blocks used in construction, primarily for
+                        walls and other building elements.
+                    </p>
+                    <span class="product-price">5.5₹</span>
+                    <a href="#" class="btn">View Details</a>
+                </div>
+            </div>
 
-        <!-- Product 6 -->
-        <div class="product-card">
-          <div class="product-image">
-            <img src="../assets/Multi Hole Brick.png" alt="Product 6" />
-          </div>
-          <div class="product-info">
-            <h3>Eco-bricks</h3>
-            <p>
-              These are made from recycled materials like plastic and waste,
-              making them a sustainable option.
-            </p>
-            <span class="product-price">5.5₹</span>
-            <a href="#" class="btn">View Details</a>
-          </div>
+            <!-- Product 5 -->
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="../assets/Multi Hole Brick.png" alt="Product 5" />
+                </div>
+                <div class="product-info">
+                    <h3>Fly Ash</h3>
+                    <p>
+                        These eco-friendly bricks utilize fly ash, a by-product of coal
+                        combustion, as a main aggregate.
+                    </p>
+                    <span class="product-price">5.5₹</span>
+                    <a href="#" class="btn">View Details</a>
+                </div>
+            </div>
+
+            <!-- Product 6 -->
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="../assets/Multi Hole Brick.png" alt="Product 6" />
+                </div>
+                <div class="product-info">
+                    <h3>Cellular lightweight blocks</h3>
+                    <p>
+                        These are made from recycled materials like plastic and waste,
+                        making them a sustainable option.
+                    </p>
+                    <span class="product-price">5.5₹</span>
+                    <a href="#" class="btn">View Details</a>
+                </div>
+            </div>
         </div>
-      </div>
     </section>
     <!--modal part-->
     <div id="productModal" class="modal hidden">
-      <div class="modal-content">
-        <span class="close-button">&times;</span>
-        <h2 id="modalTitle"></h2>
-        <p><strong>Description:</strong> <span id="modalDescription"></span></p>
-        <p>
-          <strong>Size:</strong> <span id="modalSize">190 x 90 x 90 mm</span>
-        </p>
-        <p><strong>Weight:</strong> <span id="modalWeight">~2.5 kg</span></p>
-        <p>
-          <strong>Material:</strong>
-          <span id="modalMaterial">Clay / Fly Ash</span>
-        </p>
-        <p>
-          <strong>Application:</strong>
-          <span id="modalApplication"
-            >Partition walls, acoustic insulation</span
-          >
-        </p>
-        <p><strong>Price:</strong> <span id="modalPrice"></span></p>
-        <button id="buynow">Buy Now</button>
-      </div>
+        <div class="modal-content">
+            <span class="close-button">&times;</span>
+            <h2 id="modalTitle"></h2>
+            <p><strong>Description:</strong> <span id="modalDescription"></span></p>
+            <p>
+                <strong>Size:</strong> <span id="modalSize">190 x 90 x 90 mm</span>
+            </p>
+            <p><strong>Weight:</strong> <span id="modalWeight">~2.5 kg</span></p>
+            <p>
+                <strong>Material:</strong>
+                <span id="modalMaterial">Clay / Fly Ash</span>
+            </p>
+            <p>
+                <strong>Application:</strong>
+                <span id="modalApplication">Partition walls, acoustic insulation</span>
+            </p>
+            <p><strong>Price:</strong> <span id="modalPrice"></span></p>
+            <button id="buynow">Buy Now</button>
+        </div>
     </div>
 
     <!-- footer -->
     <footer class="footer">
-      <div class="footer-container">
-        <div class="footer-content">
-          <div class="footer-section">
-            <h3>Quick Links</h3>
-            <ul>
-              <li><a href="../html/master.html">Home</a></li>
-              <li><a href="../html/aboutUs.html">About Us</a></li>
-              <li><a href="#services">Products</a></li>
-              <li><a href="#">Media</a></li>
-              <li><a href="#portfolio">Manufacturing Process</a></li>
-              <li><a href="#blog">Order Management</a></li>
-              <li><a href="../html/employee.html">Our Team</a></li>
-              <li><a href="../html/contactUs.html">Contact Us</a></li>
-            </ul>
-          </div>
+        <div class="footer-container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="../html/master.html">Home</a></li>
+                        <li><a href="../html/aboutUs.html">About Us</a></li>
+                        <li><a href="#services">Products</a></li>
+                        <li><a href="#">Media</a></li>
+                        <li><a href="#portfolio">Manufacturing Process</a></li>
+                        <li><a href="#blog">Order Management</a></li>
+                        <li><a href="../html/employee.html">Our Team</a></li>
+                        <li><a href="../html/contactUs.html">Contact Us</a></li>
+                    </ul>
+                </div>
 
-          <div class="footer-section">
-            <h3>Connect With Us</h3>
-            <p>
-              Join our community and stay updated with the latest trends and
-              innovations.
-            </p>
-            <div class="social-icons">
-              <a href="#" class="social-icon facebook">f</a>
-              <a href="#" class="social-icon twitter">X</a>
-              <a href="#" class="social-icon instagram">i</a>
-              <a href="#" class="social-icon linkedin">ln</a>
-              <a href="#" class="social-icon youtube">Y</a>
+                <div class="footer-section">
+                    <h3>Connect With Us</h3>
+                    <p>
+                        Join our community and stay updated with the latest trends and
+                        innovations.
+                    </p>
+                    <div class="social-icons">
+                        <a href="#" class="social-icon facebook">f</a>
+                        <a href="#" class="social-icon twitter">X</a>
+                        <a href="#" class="social-icon instagram">i</a>
+                        <a href="#" class="social-icon linkedin">ln</a>
+                        <a href="#" class="social-icon youtube">Y</a>
+                    </div>
+                </div>
+
+                <div class="footer-section">
+                    <h3>Contact Info</h3>
+                    <p>123 Business Avenue, Mumbai</p>
+                    <p>Maharashtra, India 400001</p>
+                    <p>Phone: +91 22 1234 5678</p>
+                    <p>Email: info@yukteshenterprises.com</p>
+                </div>
             </div>
-          </div>
 
-          <div class="footer-section">
-            <h3>Contact Info</h3>
-            <p>123 Business Avenue, Mumbai</p>
-            <p>Maharashtra, India 400001</p>
-            <p>Phone: +91 22 1234 5678</p>
-            <p>Email: info@yukteshenterprises.com</p>
-          </div>
+            <div class="footer-bottom">
+                <div class="footer-links">
+                    <a href="#privacy">Privacy Policy</a>
+                    <a href="#terms">Terms of Service</a>
+                    <a href="#cookies">Cookie Policy</a>
+                </div>
+                <p>&copy; 2023 Yuktesh Enterprises. All rights reserved.</p>
+            </div>
         </div>
-
-        <div class="footer-bottom">
-          <div class="footer-links">
-            <a href="#privacy">Privacy Policy</a>
-            <a href="#terms">Terms of Service</a>
-            <a href="#cookies">Cookie Policy</a>
-          </div>
-          <p>&copy; 2023 Yuktesh Enterprises. All rights reserved.</p>
-        </div>
-      </div>
     </footer>
     <script src="../js/products.js"></script>
-  </body>
+</body>
+
 </html>
