--- a/html/master.html
+++ b/html/master.html
@@ -4,13 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Yuktesh Enterprises Cement Brick Solutions</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="../css/master.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
    <script
       src="https://kit.fontawesome.com/ebf68a0b4f.js"
       crossorigin="anonymous"
     ></script>
-</head>
+    </head>
 <body>
   <div class="video-container">
     <video class="bg-video" autoplay muted loop playsinline>
