--- a/html/products.html
+++ b/html/products.html
@@ -64,7 +64,7 @@
                         It is a light-weight brick with excellent thermal and sound
                         insulation.
                     </p>
-                    <span class="product-price">5.5₹ per unit</span>
+                    <span class="product-price">5.50 ₹ Per Unit</span>
                     <a href="#" class="btn">View Details</a>
                 </div>
             </div>
@@ -80,7 +80,7 @@
                         The 8 conical holes in the brick, trap air inside and provide
                         better thermal insulation than ordinary brick.
                     </p>
-                    <span class="product-price">5.5₹</span>
+                    <span class="product-price">6.50 ₹ Per Unit</span>
                     <a href="#" class="btn">View Details</a>
                 </div>
             </div>
@@ -96,7 +96,7 @@
                         Hollow concrete blocks are generally considered strong, durable,
                         and cost-effective building materials.
                     </p>
-                    <span class="product-price">5.5₹</span>
+                    <span class="product-price">7.50 ₹ Per Unit</span>
                     <a href="#" class="btn">View Details</a>
                 </div>
             </div>
@@ -113,7 +113,7 @@
                         are small rectangular blocks used in construction, primarily for
                         walls and other building elements.
                     </p>
-                    <span class="product-price">5.5₹</span>
+                    <span class="product-price">8.50 ₹ Per Unit</span>
                     <a href="#" class="btn">View Details</a>
                 </div>
             </div>
@@ -129,7 +129,7 @@
                         These eco-friendly bricks utilize fly ash, a by-product of coal
                         combustion, as a main aggregate.
                     </p>
-                    <span class="product-price">5.5₹</span>
+                    <span class="product-price">9.50 ₹ Per Unit</span>
                     <a href="#" class="btn">View Details</a>
                 </div>
             </div>
@@ -145,7 +145,7 @@
                         These are made from recycled materials like plastic and waste,
                         making them a sustainable option.
                     </p>
-                    <span class="product-price">5.5₹</span>
+                    <span class="product-price">10.50 ₹ Per Unit</span>
                     <a href="#" class="btn">View Details</a>
                 </div>
             </div>
