--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -55,7 +55,11 @@
           </li>
           <li><a href="products.html" class="nav-link">Products</a></li>
           <li><a href="#" class="nav-link">Media</a></li>
-          <li><a href="#" class="nav-link">Manufacturing Process</a></li>
+          <li>
+            <a href="manufactruingProcess.html" class="nav-link"
+              >Manufacturing Process</a
+            >
+          </li>
           <li><a href="#" class="nav-link">Order Management</a></li>
           <li><a href="employee.html" class="nav-link">Our Team</a></li>
           <li><a href="contactUs.html" class="nav-link">Contact Us</a></li>
@@ -231,7 +235,9 @@
               <li><a href="aboutUs.html">About Us</a></li>
               <li><a href="products.html">Products</a></li>
               <li><a href="#">Media</a></li>
-              <li><a href="#">Manufacturing Process</a></li>
+              <li>
+                <a href="manufactruingProcess.html">Manufacturing Process</a>
+              </li>
               <li><a href="#">Order Management</a></li>
               <li><a href="employee.html">Our Team</a></li>
               <li><a href="contactUs.html">Contact Us</a></li>
