--- a/html/contactUs.html
+++ b/html/contactUs.html
@@ -59,7 +59,11 @@
           <li><a href="aboutUs.html" class="nav-link">About Us</a></li>
           <li><a href="../html/products.html" class="nav-link">Products</a></li>
           <li><a href="#" class="nav-link">Media</a></li>
-          <li><a href="#" class="nav-link">Manufacturing Process</a></li>
+          <li>
+            <a href="manufactruingProcess.html" class="nav-link"
+              >Manufacturing Process</a
+            >
+          </li>
           <li><a href="#" class="nav-link">Order Management</a></li>
           <li><a href="./employee.html" class="nav-link">Our Team</a></li>
           <li>
@@ -130,7 +134,9 @@
               <li><a href="aboutUs.html">About Us</a></li>
               <li><a href="../html/products.html">Products</a></li>
               <li><a href="#">Media</a></li>
-              <li><a href="#portfolio">Manufacturing Process</a></li>
+              <li>
+                <a href="manufactruingProcess.html">Manufacturing Process</a>
+              </li>
               <li><a href="#blog">Order Management</a></li>
               <li><a href="employee.html">Our Team</a></li>
               <li><a href="contactUs.html">Contact Us</a></li>
