--- a/html/employee.html
+++ b/html/employee.html
@@ -53,7 +53,9 @@
               <a href="#" class="nav-link">Media</a>
             </li>
             <li>
-              <a href="#" class="nav-link">Manufacturing Process</a>
+              <a href="manufactruingProcess.html" class="nav-link"
+                >Manufacturing Process</a
+              >
             </li>
             <li>
               <a href="#" class="nav-link">Order Management</a>
@@ -124,7 +126,9 @@
               <li><a href="aboutUs.html">About Us</a></li>
               <li><a href="products.html">Products</a></li>
               <li><a href="#blog">Media</a></li>
-              <li><a href="#portfolio">Manufacturing Process</a></li>
+              <li>
+                <a href="manufactruingProcess.html">Manufacturing Process</a>
+              </li>
               <li><a href="#blog">Order Management</a></li>
               <li><a href="employee.html">Our Team</a></li>
               <li><a href="contactUs.html">Contact Us</a></li>
